Fixed receipt layout. Removed company name from receipt. Added more papiamentu slogans. Fixed amount spelling. Replaced an item's image. Fixed receipt logo adding too much space.

--- a/Styles/Items.css
+++ b/Styles/Items.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    padding: 60px;
+    padding: 100px;
     padding-top: 0px;
 }
 
@@ -17,7 +17,7 @@
 
 .ItemImage {
     width: 100%;
-    height: 200px;
+    height: 130px;
     object-fit: contain;
     border-radius: 5px;
 }
@@ -75,7 +75,7 @@
 .ItemNameClass {
     color: black;
     font-size: 20px;
-
+    font-weight: 600;
 }
 
 .FirstChildItemcard {
